# DiscreteSignals

./: .drone.yml  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py
discrete_signals/: __init__.py  signals.py  test_signals.py
