[tool.poetry]
name = "discrete-signals"
version = "0.8.0"
description = "A domain specific language for modeling and manipulating discrete time signals."
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^19.3.0"
funcy = "^1.14"
sortedcontainers = "^2.1.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
