[tool.poetry]
name = "discrete-signals"
readme="README.md"
version = "0.8.3"
description = "A domain specific language for modeling and manipulating discrete time signals."
repository = "https://github.com/mvcisback/DiscreteSignals"
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
license = "MIT"
packages = [
    { include = "discrete_signals" },
]


[tool.poetry.dependencies]
python = "^3.7"
attrs = "^22"
funcy = "^1.14"
sortedcontainers = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
